feat: add title tag

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head> 
+    <title>Peter's Personal Website</title>
   </head>
   <body>
     Hello World! This is my website.
