--- a/resume.html
+++ b/resume.html
@@ -6,6 +6,11 @@
   <body>
     Resume Page
     <main>
+      <section></section>
+      <section></section>
+      <section></section>
+      <section></section>
+      <section></section>
     </main>
   </body>
 </html>
