--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <title>Peter's Personal Website</title>
   </head>
   <body>
-    Hello World! This is my website.
+    <nav>
+    </nav>
     <main>
+      Hello World! This is my website.
     </main>
+    <footer>
+    </footer>
   </body>
 </html>
