feat: add nav and footer tags to rest of pages

--- a/blog.html
+++ b/blog.html
@@ -4,8 +4,12 @@
     <title>Blog</title>
   </head>
   <body>
+    <nav>
+    </nav>
     <main>
       Blog Page
     </main>
+    <footer>
+    </footer>
   </body>
 </html>
