--- a/contact.html
+++ b/contact.html
@@ -4,8 +4,12 @@
     <title>Contact</title>
   </head>
   <body>
+    <nav>
+    </nav>
     <main>
       Contact Page
     </main>
+    <footer>
+    </footer>
   </body>
 </html>
