--- a/resume.html
+++ b/resume.html
@@ -4,6 +4,8 @@
     <title>Resume</title>
   </head>
   <body>
+    <nav>
+    </nav>
     <main>
       Resume Page
       <section></section>
@@ -12,5 +14,7 @@
       <section></section>
       <section></section>
     </main>
+    <footer>
+    </footer>
   </body>
 </html>
