--- a/portfolio.html
+++ b/portfolio.html
@@ -4,8 +4,12 @@
     <title>Portfolio</title>
   </head>
   <body>
+    <nav>
+    </nav>
     <main>
       Portfolio Page
     </main>
+    <footer>
+    </footer>
   </body>
 </html>
