feat: add copyright text to the footer for all pages

--- a/blog.html
+++ b/blog.html
@@ -10,6 +10,7 @@
       Blog Page
     </main>
     <footer>
+      © 2024 Peter's Personal Website | All Rights Reserved
     </footer>
   </body>
 </html>
