--- a/resume.html
+++ b/resume.html
@@ -15,6 +15,7 @@
       <section></section>
     </main>
     <footer>
+      © 2024 Peter's Personal Website | All Rights Reserved
     </footer>
   </body>
 </html>
