--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,7 @@
       Contact Page
     </main>
     <footer>
+      © 2024 Peter's Personal Website | All Rights Reserved
     </footer>
   </body>
 </html>
