--- a/portfolio.html
+++ b/portfolio.html
@@ -10,6 +10,7 @@
       Portfolio Page
     </main>
     <footer>
+      © 2024 Peter's Personal Website | All Rights Reserved
     </footer>
   </body>
 </html>
