--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <nav>
     </nav>
     <main>
-      Hello World! This is my website.
+      <p>Hello World! This is my website.</p>
+      <p>This is a sentence.</p>
     </main>
     <footer>
       © 2024 Peter's Personal Website | All Rights Reserved
