feat: add introduction with emphasis and breaks

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <nav>
     </nav>
     <main>
-      <p>Hello World! This is my website.</p>
-      <p>This is a sentence.</p>
+      <p>Hello! My name is <strong>Peter Kallos</strong>. I'm a <em>fourth year</em> computer science student at <strong>Cal Poly</strong> with a strong interest in software development and all things technology.</p>
+      <p>Outside of school and programming, I enjoy playing soccer, guitar, exercising, and photography.</p>
     </main>
     <footer>
       © 2024 Peter's Personal Website | All Rights Reserved
