feat: add heading

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <nav>
     </nav>
     <main>
+      <h1>
+        Home
+      </h1>
       <p>Hello! My name is <strong>Peter Kallos</strong>. I'm a <em>fourth year</em> computer science student at <strong>Cal Poly</strong> with a strong interest in software development and all things technology.</p>
       <p>Outside of school and programming, I enjoy playing soccer, guitar, exercising, and photography.</p>
     </main>
