--- a/index.html
+++ b/index.html
@@ -10,8 +10,13 @@
       <h1>
         Home
       </h1>
-      <p>Hello! My name is <strong>Peter Kallos</strong>. I'm a <em>fourth year</em> computer science student at <strong>Cal Poly</strong> with a strong interest in software development and all things technology.</p>
-      <p>Outside of school and programming, I enjoy playing soccer, guitar, exercising, and photography.</p>
+      <div class="about">
+        <div class="about-image"></div>
+        <div class="about-text">
+          <p>Hello! My name is <strong>Peter Kallos</strong>. I'm a <em>fourth year</em> computer science student at <strong>Cal Poly</strong> with a strong interest in software development and all things technology.</p>
+          <p>Outside of school and programming, I enjoy playing soccer, guitar, exercising, and photography.</p>
+        </div>
+      </div>
     </main>
     <footer>
       © 2024 Peter's Personal Website | All Rights Reserved
