--- a/index.html
+++ b/index.html
@@ -1,25 +1,28 @@
 <!DOCTYPE html>
 <html>
-  <head> 
+  <head>
     <title>Peter's Personal Website</title>
   </head>
   <body>
-    <nav>
-    </nav>
+    <nav></nav>
     <main>
-      <h1>
-        Home
-      </h1>
+      <h1>Home</h1>
       <div class="about">
         <div class="about-image"></div>
         <div class="about-text">
-          <p>Hello! My name is <strong>Peter Kallos</strong>. I'm a <em>fourth year</em> computer science student at <strong>Cal Poly</strong> with a strong interest in software development and all things technology.</p>
-          <p>Outside of school and programming, I enjoy playing soccer, guitar, exercising, and photography.</p>
+          <p>
+            Hello! My name is <strong>Peter Kallos</strong>. I'm a
+            <em>fourth year</em> computer science student at
+            <strong>Cal Poly</strong> with a strong interest in software
+            development and all things technology.
+          </p>
+          <p>
+            Outside of school and programming, I enjoy playing soccer, guitar,
+            exercising, and photography.
+          </p>
         </div>
       </div>
     </main>
-    <footer>
-      © 2024 Peter's Personal Website | All Rights Reserved
-    </footer>
+    <footer>© 2024 Peter's Personal Website | All Rights Reserved</footer>
   </body>
 </html>
