--- a/portfolio.html
+++ b/portfolio.html
@@ -1,16 +1,11 @@
 <!DOCTYPE html>
 <html>
-  <head> 
+  <head>
     <title>Portfolio</title>
   </head>
   <body>
-    <nav>
-    </nav>
-    <main>
-      Portfolio Page
-    </main>
-    <footer>
-      © 2024 Peter's Personal Website | All Rights Reserved
-    </footer>
+    <nav></nav>
+    <main>Portfolio Page</main>
+    <footer>© 2024 Peter's Personal Website | All Rights Reserved</footer>
   </body>
 </html>
