--- a/resume.html
+++ b/resume.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html>
-  <head> 
+  <head>
     <title>Resume</title>
   </head>
   <body>
-    <nav>
-    </nav>
+    <nav></nav>
     <main>
       Resume Page
       <section></section>
@@ -14,8 +13,6 @@
       <section></section>
       <section></section>
     </main>
-    <footer>
-      © 2024 Peter's Personal Website | All Rights Reserved
-    </footer>
+    <footer>© 2024 Peter's Personal Website | All Rights Reserved</footer>
   </body>
 </html>
