feat: add headings with attributes for all pages

--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,9 @@
   </head>
   <body>
     <nav></nav>
-    <main>Portfolio Page</main>
+    <main>
+      <h1 class="portfolio-title">Portfolio</h1>
+    </main>
     <footer>© 2024 Peter's Personal Website | All Rights Reserved</footer>
   </body>
 </html>
