--- a/blog.html
+++ b/blog.html
@@ -5,7 +5,9 @@
   </head>
   <body>
     <nav></nav>
-    <main>Blog Page</main>
+    <main>
+      <h1 class="blog-title">Blog</h1>
+    </main>
     <footer>© 2024 Peter's Personal Website | All Rights Reserved</footer>
   </body>
 </html>
