--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,9 @@
   </head>
   <body>
     <nav></nav>
-    <main>Contact Page</main>
+    <main>
+      <h1 class="contact-title">Contact</h1>
+    </main>
     <footer>© 2024 Peter's Personal Website | All Rights Reserved</footer>
   </body>
 </html>
