--- a/resume.html
+++ b/resume.html
@@ -6,7 +6,7 @@
   <body>
     <nav></nav>
     <main>
-      Resume Page
+      <h1 class="resume-title">Resume</h1>
       <section></section>
       <section></section>
       <section></section>
