--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <body>
     <nav></nav>
     <main>
-      <h1 class="about-title">Home</h1>
+      <h1 class="about-title">About</h1>
       <div class="about">
         <div class="about-image"></div>
         <div class="about-text">
