--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,9 @@
     <title>Blog</title>
   </head>
   <body>
-    <nav></nav>
+    <nav>
+      <h1 class="logo">Personal Website</h1>
+    </nav>
     <main>
       <h1 class="blog-title">Blog</h1>
     </main>
