--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,9 @@
     <title>Contact</title>
   </head>
   <body>
-    <nav></nav>
+    <nav>
+      <h1 class="logo">Personal Website</h1>
+    </nav>
     <main>
       <h1 class="contact-title">Contact</h1>
     </main>
