--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <title>Peter's Personal Website</title>
   </head>
   <body>
-    <nav></nav>
+    <nav>
+      <h1 class="logo">Personal Website</h1>
+    </nav>
     <main>
       <h1 class="about-title">About</h1>
       <div class="about">
