--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,9 @@
     <title>Portfolio</title>
   </head>
   <body>
-    <nav></nav>
+    <nav>
+      <h1 class="logo">Personal Website</h1>
+    </nav>
     <main>
       <h1 class="portfolio-title">Portfolio</h1>
     </main>
