--- a/resume.html
+++ b/resume.html
@@ -4,7 +4,9 @@
     <title>Resume</title>
   </head>
   <body>
-    <nav></nav>
+    <nav>
+      <h1 class="logo">Personal Website</h1>
+    </nav>
     <main>
       <h1 class="resume-title">Resume</h1>
       <section></section>
