feat: add navbar and footer attributes for all pages

--- a/resume.html
+++ b/resume.html
@@ -4,7 +4,7 @@
     <title>Resume</title>
   </head>
   <body>
-    <nav>
+    <nav class="navbar">
       <h1 class="logo">Personal Website</h1>
     </nav>
     <main>
@@ -15,6 +15,6 @@
       <section></section>
       <section></section>
     </main>
-    <footer>© 2024 Peter's Personal Website | All Rights Reserved</footer>
+    <footer class="footer">© 2024 Peter's Personal Website | All Rights Reserved</footer>
   </body>
 </html>
