--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Peter's Personal Website</title>
   </head>
   <body>
-    <nav>
+    <nav class="navbar">
       <h1 class="logo">Personal Website</h1>
     </nav>
     <main>
@@ -25,6 +25,6 @@
         </div>
       </div>
     </main>
-    <footer>© 2024 Peter's Personal Website | All Rights Reserved</footer>
+    <footer class="footer">© 2024 Peter's Personal Website | All Rights Reserved</footer>
   </body>
 </html>
