--- a/portfolio.html
+++ b/portfolio.html
@@ -4,12 +4,12 @@
     <title>Portfolio</title>
   </head>
   <body>
-    <nav>
+    <nav class="navbar">
       <h1 class="logo">Personal Website</h1>
     </nav>
     <main>
       <h1 class="portfolio-title">Portfolio</h1>
     </main>
-    <footer>© 2024 Peter's Personal Website | All Rights Reserved</footer>
+    <footer class="footer">© 2024 Peter's Personal Website | All Rights Reserved</footer>
   </body>
 </html>
