feat: add div with resume attribute

--- a/resume.html
+++ b/resume.html
@@ -9,6 +9,7 @@
     </nav>
     <main>
       <h1 class="resume-title">Resume</h1>
+      <div class="resume">
       <section></section>
       <section></section>
       <section></section>
