--- a/resume.html
+++ b/resume.html
@@ -10,11 +10,11 @@
     <main>
       <h1 class="resume-title">Resume</h1>
       <div class="resume">
-      <section></section>
-      <section></section>
-      <section></section>
-      <section></section>
-      <section></section>
+      <section class="section"></section>
+      <section class="section"></section>
+      <section class="section"></section>
+      <section class="section"></section>
+      <section class="section"></section>
     </main>
     <footer class="footer">© 2024 Peter's Personal Website | All Rights Reserved</footer>
   </body>
