--- a/resume.html
+++ b/resume.html
@@ -10,11 +10,21 @@
     <main>
       <h1 class="resume-title">Resume</h1>
       <div class="resume">
-        <section class="section"></section>
-        <section class="section"></section>
-        <section class="section"></section>
-        <section class="section"></section>
-        <section class="section"></section>
+        <section class="section">
+          <h2 class="section-title">Projects</h2>
+        </section>
+        <section class="section">
+          <h2 class="section-title">Skills</h2>
+        </section>
+        <section class="section">
+          <h2 class="section-title">Coursework</h2>
+        </section>
+        <section class="section">
+          <h2 class="section-title">Education</h2>
+        </section>
+        <section class="section">
+          <h2 class="section-title">Interests</h2>
+        </section>
       </div>
     </main>
     <footer class="footer">© 2024 Peter's Personal Website | All Rights Reserved</footer>
