--- a/blog.html
+++ b/blog.html
@@ -10,6 +10,8 @@
     <main>
       <h1 class="blog-title">Blog</h1>
     </main>
-    <footer class="footer">© 2024 Peter's Personal Website | All Rights Reserved</footer>
+    <footer class="footer">
+      © 2024 Peter's Personal Website | All Rights Reserved
+    </footer>
   </body>
 </html>
