--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,8 @@
     <main>
       <h1 class="contact-title">Contact</h1>
     </main>
-    <footer class="footer">© 2024 Peter's Personal Website | All Rights Reserved</footer>
+    <footer class="footer">
+      © 2024 Peter's Personal Website | All Rights Reserved
+    </footer>
   </body>
 </html>
