--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
         </div>
       </div>
     </main>
-    <footer class="footer">© 2024 Peter's Personal Website | All Rights Reserved</footer>
+    <footer class="footer">
+      © 2024 Peter's Personal Website | All Rights Reserved
+    </footer>
   </body>
 </html>
