--- a/portfolio.html
+++ b/portfolio.html
@@ -11,6 +11,8 @@
       <h1 class="portfolio-title">Portfolio</h1>
       <div class="project"></div>
     </main>
-    <footer class="footer">© 2024 Peter's Personal Website | All Rights Reserved</footer>
+    <footer class="footer">
+      © 2024 Peter's Personal Website | All Rights Reserved
+    </footer>
   </body>
 </html>
