--- a/resume.html
+++ b/resume.html
@@ -27,6 +27,8 @@
         </section>
       </div>
     </main>
-    <footer class="footer">© 2024 Peter's Personal Website | All Rights Reserved</footer>
+    <footer class="footer">
+      © 2024 Peter's Personal Website | All Rights Reserved
+    </footer>
   </body>
 </html>
