feat: add image file/clouds image to about page

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <main>
       <h1 class="about-title">About</h1>
       <div class="about">
-        <div class="about-image"></div>
+        <div class="about-image"><img src="clouds.jpg" alt="Image of clouds" width="300" height="300"></div>
         <div class="about-text">
           <p>
             Hello! My name is <strong>Peter Kallos</strong>. I'm a
