--- a/contact.html
+++ b/contact.html
@@ -18,33 +18,15 @@
     </nav>
     <main>
       <h1 class="contact-title">Contact</h1>
-      <p>Form</p>
-      <form>
-        <label for="name">Name</label>
-        <input type="text" id="name" name="name" placeholder="Name" required />
-        <br><br>
-        <label for="email">Email</label>
-        <input type="email" id="email" name="email" placeholder="Email" />
-        <br><br>
-        <label for="password">Password</label>
-        <input type="password" id="pass" name="pass" placeholder="Password" />
-        <br><br>
-        <label for="select">Position</label>
-        <select id="select" name="select">
-          <option value="software">Software Developer</option>
-          <option value="product">Product Manager</option>
-          <option value="design">Designer</option>
-        </select>
-        <br><br>
-        <label for="comments">Comments</label>
-        <textarea
-          id="comments"
-          name="comments"
-          placeholder="Comments"
-          required
-        ></textarea>
-        <br><br>
-        <input type="submit" value="Submit" />
+      <form id="contact-form">
+        <label>Name</label>
+        <input type="text" id="name" />
+        <label>Email</label>
+        <input type="email" id="email" />
+        <label>Message</label>
+        <textarea></textarea>
+        <input type="submit" />
+      </form>
     </main>
     <footer class="footer">
       © 2024 Peter's Personal Website | All Rights Reserved
