--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,18 @@
     </nav>
     <main>
       <h1 class="portfolio-title">Portfolio</h1>
-      <div class="project"></div>
+      <div class="project">
+        <a href="index.html">
+          <img src="clouds.jpg" width="300" height="300" />
+        </a>
+        <div class="project-details">
+          <p class="project-name">Personal Website</p>
+          <p class="project-description">
+            My personal website made with the Hack4Impact Starter Pack
+          </p>
+          <a href="index.html">Learn More</a>
+        </div>
+      </div>
     </main>
     <footer class="footer">
       © 2024 Peter's Personal Website | All Rights Reserved
