--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
       <h1 class="portfolio-title">Portfolio</h1>
       <div class="project">
         <a href="index.html">
-          <img src="clouds.jpg" width="300" height="300" />
+          <img src="clouds.jpg" />
         </a>
         <div class="project-details">
           <p class="project-name">Personal Website</p>
