--- a/contact.html
+++ b/contact.html
@@ -20,12 +20,9 @@
     <main>
       <h1 class="contact-title">Contact</h1>
       <form id="contact-form">
-        <label>Name</label>
-        <input type="text" id="name" />
-        <label>Email</label>
-        <input type="email" id="email" />
-        <label>Message</label>
-        <textarea></textarea>
+        <input type="text" id="name" placeholder="Name" autocomplete="off"/>
+        <input type="email" id="email" placeholder="Email" autocomplete="off"/>
+        <textarea placeholder="Message" autocomplete="off"></textarea>
         <input type="submit" />
       </form>
     </main>
