feat: combined repeat button stylings into one class

--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
         <input type="text" id="name" placeholder="Name" autocomplete="off"/>
         <input type="email" id="email" placeholder="Email" autocomplete="off"/>
         <textarea placeholder="Message" autocomplete="off"></textarea>
-        <input type="submit" />
+        <input class="button" type="submit" />
       </form>
     </main>
     <footer class="footer">
