--- a/portfolio.html
+++ b/portfolio.html
@@ -28,7 +28,7 @@
           <p class="project-description">
             My personal website made with the Hack4Impact Starter Pack
           </p>
-          <a href="index.html">Learn More</a>
+          <a href="index.html" class="button">Learn More</a>
         </div>
       </div>
     </main>
