--- a/resume.html
+++ b/resume.html
@@ -19,7 +19,7 @@
     </nav>
     <main>
       <h1 class="resume-title">Resume</h1>
-      <a href="resume.pdf" class="download-button" download>Download Resume</a>
+      <a href="resume.pdf" class="button" download>Download Resume</a>
       <div class="resume"></div>
         <section class="section">
           <h2 class="section-title">Education</h2>
