feat: create and apply neat-image class for good quality

--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
           <img
             src="clouds.jpg"
             alt="Image of clouds"
-            width="300"
-            height="300"
+            class="neat-image"
           />
         </div>
         <div class="about-text">
