--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
         <a href="index.html">Personal Website</a>
       </h1>
       <ul class="nav-list">
-        <li><a href="index.html">About</a></li>
-        <li><a href="blog.html">Blog</a></li>
+        <li><a href="index.html" class="active">About</a></li>
+        <li><a href="blog.html" class="active">Blog</a></li>
         <li><a href="portfolio.html">Portfolio</a></li>
         <li><a href="resume.html">Resume</a></li>
         <li><a href="contact.html">Contact</a></li>
