--- a/portfolio.html
+++ b/portfolio.html
@@ -19,16 +19,30 @@
     </nav>
     <main>
       <h1 class="portfolio-title">Portfolio</h1>
-      <div class="project">
-        <a href="index.html">
-          <img src="clouds.jpg" alt="Image of clouds" class="neat-image" />
-        </a>
-        <div class="project-details">
-          <p class="project-name">Personal Website</p>
-          <p class="project-description">
-            My personal website made with the Hack4Impact Starter Pack
-          </p>
-          <a href="index.html" class="button">Learn More</a>
+      <div class="project-container">
+        <div class="project project-left">
+          <a href="index.html">
+            <img src="clouds.jpg" alt="Image of clouds" class="neat-image" />
+          </a>
+          <div class="project-details">
+            <p class="project-name">Personal Website</p>
+            <p class="project-description">
+              My personal website made with the Hack4Impact Starter Pack
+            </p>
+            <a href="index.html" class="button">Learn More</a>
+          </div>
+        </div>
+        <div class="project project-right">
+          <a href="index.html">
+            <img src="clouds.jpg" alt="Image of clouds" class="neat-image" />
+          </a>
+          <div class="project-details">
+            <p class="project-name">Personal Website</p>
+            <p class="project-description">
+              My personal website made with the Hack4Impact Starter Pack
+            </p>
+            <a href="index.html" class="button">Learn More</a>
+          </div>
         </div>
       </div>
     </main>
