feat: add images folder, add CTW project

--- a/portfolio.html
+++ b/portfolio.html
@@ -20,30 +20,57 @@
     <main>
       <h1 class="portfolio-title">Portfolio</h1>
       <div class="project-container">
-        <div class="project project-left">
-          <a href="index.html">
-            <img src="clouds.jpg" alt="Image of clouds" class="neat-image" />
-          </a>
-          <div class="project-details">
-            <p class="project-name">Personal Website</p>
-            <p class="project-description">
-              My personal website made with the Hack4Impact Starter Pack
-            </p>
-            <a href="index.html" class="button">Learn More</a>
+        <div class="project-column-left">
+          <div class="project">
+            <a href="index.html">
+              <img src="images/clouds.jpg" alt="Image of clouds" class="neat-image" />
+            </a>
+            <div class="project-details">
+              <p class="project-name">Personal Website</p>
+              <p class="project-description">
+                My personal website made with the Hack4Impact Starter Pack
+              </p>
+              <a href="index.html" class="button">Learn More</a>
+            </div>
+          </div>
+          <div class="project project-left">
+            <a href="index.html">
+              <img src="images/CTW_Screenshots.png" alt="Image of California Traffic Watch App" class="neat-image" />
+            </a>
+            <div class="project-details">
+              <p class="project-name">.</p>
+              <p class="project-description">
+                .
+              </p>
+              <a href="index.html" class="button">Learn More</a>
+            </div>
           </div>
         </div>
-        <div class="project project-right">
-          <a href="index.html">
-            <img src="clouds.jpg" alt="Image of clouds" class="neat-image" />
-          </a>
-          <div class="project-details">
-            <p class="project-name">Personal Website</p>
-            <p class="project-description">
-              My personal website made with the Hack4Impact Starter Pack
-            </p>
-            <a href="index.html" class="button">Learn More</a>
+        <div class="project-column-right">
+          <div class="project">
+            <a href="index.html">
+              <img src="images/CTW_Screenshots.png" alt="Image of California Traffic Watch App" class="neat-image" />
+            </a>
+            <div class="project-details">
+              <p class="project-name">California Traffic Watch App</p>
+              <p class="project-description">
+                Developed a full-stack, map-based mobile app for Android and iOS
+                using traffic data provided by Caltrans and CHP for up-to-date
+                information on California’s highways. Profiled the app with React
+                Developer Tools and optimized performance via component
+                memoization. Utilized Google Maps SDK and React Native libraries
+                for real-time user location and marker clustering. Integrated
+                AsyncStorage and React’s Context API for persistent user
+                preferences and state management when setting theme. Created
+                custom components for permissions and support modals, app theme,
+                and traffic details pages. Designed custom UI elements including
+                icons, map styles, and buttons.
+              </p>
+              <a href="index.html" class="button">Learn More</a>
+            </div>
           </div>
         </div>
+
       </div>
     </main>
     <footer class="footer">
