feat: add projects

--- a/portfolio.html
+++ b/portfolio.html
@@ -20,10 +20,16 @@
     <main>
       <h1 class="portfolio-title">Portfolio</h1>
       <div class="project-container">
+        <!-- Left column -->
         <div class="project-column-left">
+
           <div class="project">
             <a href="index.html">
-              <img src="images/clouds.jpg" alt="Image of clouds" class="neat-image" />
+              <img
+                src="images/clouds.jpg"
+                alt="Image of clouds"
+                class="neat-image"
+              />
             </a>
             <div class="project-details">
               <p class="project-name">Personal Website</p>
@@ -33,31 +39,72 @@
               <a href="index.html" class="button">Learn More</a>
             </div>
           </div>
-          <div class="project project-left">
-            <a href="index.html">
-              <img src="images/CTW_Screenshots.png" alt="Image of California Traffic Watch App" class="neat-image" />
+
+          <div class="project">
+            <a href="https://github.com/AVC-CS-Committee/InteractiveCampusMap" target="_blank">
+              <img
+                src="images/campus_map_app.jpg"
+                alt="Image of Interactive Campus Map App"
+                class="neat-image"
+              />
             </a>
             <div class="project-details">
-              <p class="project-name">.</p>
+              <p class="project-name">Interactive Campus Map App</p>
               <p class="project-description">
-                .
+                Led a team of eight student developers in creating a
+                location-based, interactive map application. Integrated Google
+                Maps SDK and used its FusedLocationProvider API with Android's
+                Location API for displaying the real-time location of the user.
+                Created filters for POIs and dynamically revealed POIs based on
+                user proximity. Displayed nearest parking from user and parking
+                lot coordinates and implemented persistant data storage for
+                saving parking locations through Flutter's SharedPreferences
+                plugin. Migrated codebase from native Android to Flutter for iOS
+                compatibility.
               </p>
-              <a href="index.html" class="button">Learn More</a>
+              <a href="https://github.com/AVC-CS-Committee/InteractiveCampusMap" class="button" target="_blank">Learn More</a>
             </div>
           </div>
+
+          <div class="project">
+            <a href="https://github.com/KallosP/Virtual-World" target="_blank">
+              <img
+                src="images/virtual_world.jpg"
+                alt="Image of California Traffic Watch App"
+                class="neat-image"
+              />
+            </a>
+            <div class="project-details">
+              <p class="project-name">Virtual World Simulation</p>
+              <p class="project-description">
+                Optimized pathfinding functionality by implementing a custom A*
+                search algorithm, enhancing navigation for various entities
+                within a 2D simulated world. Refactored large codebase adhering
+                to object-oriented design standards; improved code
+                maintainability, readability, and scalability.
+              </p>
+              <a href="https://github.com/KallosP/Virtual-World" class="button" target="_blank">Learn More</a>
+            </div>
+          </div>
+
+          <!-- Right column -->
         </div>
         <div class="project-column-right">
           <div class="project">
-            <a href="index.html">
-              <img src="images/CTW_Screenshots.png" alt="Image of California Traffic Watch App" class="neat-image" />
+            <a href="https://github.com/KallosP/CaliforniaTrafficWatchPreview" target="_blank">
+              <img
+                src="images/CTW_Screenshots.png"
+                alt="Image of California Traffic Watch App"
+                class="neat-image"
+              />
             </a>
             <div class="project-details">
               <p class="project-name">California Traffic Watch App</p>
               <p class="project-description">
                 Developed a full-stack, map-based mobile app for Android and iOS
                 using traffic data provided by Caltrans and CHP for up-to-date
-                information on California’s highways. Profiled the app with React
-                Developer Tools and optimized performance via component
+                information on California’s highways. Profiled the app with
+                React Developer Tools and optimized performance via component
                 memoization. Utilized Google Maps SDK and React Native libraries
                 for real-time user location and marker clustering. Integrated
                 AsyncStorage and React’s Context API for persistent user
@@ -66,11 +113,31 @@
                 and traffic details pages. Designed custom UI elements including
                 icons, map styles, and buttons.
               </p>
-              <a href="index.html" class="button">Learn More</a>
+              <a href="https://github.com/KallosP/CaliforniaTrafficWatchPreview" class="button" target="_blank">Learn More</a>
+            </div>
+          </div>
+          <div class="project">
+            <a href="https://github.com/KallosP/Task-Manager-API" target="_blank">
+              <img
+                src="images/task-manager.jpg"
+                alt="Image of California Traffic Watch App"
+                class="neat-image"
+              />
+            </a>
+            <div class="project-details">
+              <p class="project-name">Task Manager API</p>
+              <p class="project-description">
+                Developed an end-to-end RESTful API for general task management
+                as part of a team of three student developers. Designed
+                comprehensive example flows and user stories, and created an ER
+                diagram for the database schema. Implemented concurrency control
+                to ensure transaction isolation and carried out performance
+                tuning, improving query execution times by 90%.
+              </p>
+              <a href="https://github.com/KallosP/Task-Manager-API" class="button" target="_blank">Learn More</a>
             </div>
           </div>
         </div>
-
       </div>
     </main>
     <footer class="footer">
