fix: update cloud image path

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div class="about">
         <div class="about-image">
           <img
-            src="clouds.jpg"
+            src="images/clouds.jpg"
             alt="Image of clouds"
             class="neat-image"
           />
