--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,6 @@
       <div class="project-container">
         <!-- Left column -->
         <div class="project-column-left">
-
           <div class="project">
             <a href="index.html">
               <img
@@ -41,7 +40,10 @@
           </div>
 
           <div class="project">
-            <a href="https://github.com/AVC-CS-Committee/InteractiveCampusMap" target="_blank">
+            <a
+              href="https://github.com/AVC-CS-Committee/InteractiveCampusMap"
+              target="_blank"
+            >
               <img
                 src="images/campus_map_app.jpg"
                 alt="Image of Interactive Campus Map App"
@@ -62,7 +64,12 @@
                 plugin. Migrated codebase from native Android to Flutter for iOS
                 compatibility.
               </p>
-              <a href="https://github.com/AVC-CS-Committee/InteractiveCampusMap" class="button" target="_blank">Learn More</a>
+              <a
+                href="https://github.com/AVC-CS-Committee/InteractiveCampusMap"
+                class="button"
+                target="_blank"
+                >Learn More</a
+              >
             </div>
           </div>
 
@@ -83,7 +90,12 @@
                 to object-oriented design standards; improved code
                 maintainability, readability, and scalability.
               </p>
-              <a href="https://github.com/KallosP/Virtual-World" class="button" target="_blank">Learn More</a>
+              <a
+                href="https://github.com/KallosP/Virtual-World"
+                class="button"
+                target="_blank"
+                >Learn More</a
+              >
             </div>
           </div>
 
@@ -91,7 +103,10 @@
         </div>
         <div class="project-column-right">
           <div class="project">
-            <a href="https://github.com/KallosP/CaliforniaTrafficWatchPreview" target="_blank">
+            <a
+              href="https://github.com/KallosP/CaliforniaTrafficWatchPreview"
+              target="_blank"
+            >
               <img
                 src="images/CTW_Screenshots.png"
                 alt="Image of California Traffic Watch App"
@@ -113,11 +128,19 @@
                 and traffic details pages. Designed custom UI elements including
                 icons, map styles, and buttons.
               </p>
-              <a href="https://github.com/KallosP/CaliforniaTrafficWatchPreview" class="button" target="_blank">Learn More</a>
+              <a
+                href="https://github.com/KallosP/CaliforniaTrafficWatchPreview"
+                class="button"
+                target="_blank"
+                >Learn More</a
+              >
             </div>
           </div>
           <div class="project">
-            <a href="https://github.com/KallosP/Task-Manager-API" target="_blank">
+            <a
+              href="https://github.com/KallosP/Task-Manager-API"
+              target="_blank"
+            >
               <img
                 src="images/task-manager.jpg"
                 alt="Image of California Traffic Watch App"
@@ -134,7 +157,12 @@
                 to ensure transaction isolation and carried out performance
                 tuning, improving query execution times by 90%.
               </p>
-              <a href="https://github.com/KallosP/Task-Manager-API" class="button" target="_blank">Learn More</a>
+              <a
+                href="https://github.com/KallosP/Task-Manager-API"
+                class="button"
+                target="_blank"
+                >Learn More</a
+              >
             </div>
           </div>
         </div>
